# Smart_Symbolic_Graphing_Calculator

./: .cproject  .gitignore  .gitmodules  .pclist  .project  CMakeLists.txt  Calculator.cpp  Calculator.h  DesignArchitecture.md  Keypad.cpp  Keypad.h  MCP23017.cpp  MCP23017.h  Makefile  README.md  Settings.cpp  Settings.hxx  algorithm_extensions.hxx  calc_conf.h  calc_conf.h.in  cinit.py  demo  graph.cpp  graph.hxx  graphing.cpp  graphing.hxx  history.json  lv_conf.h  lv_conf.h.bak  lv_demo_conf.h  lv_drv_conf.h  lv_drv_conf.h.bak  main.c  main.cpp  makegen.py  oof.txt  output.txt  startUp.sh  tabs.cpp  tabs.hxx
cmake_includes/: includeconv.cmake
dependencies/giac-1.7.0/: BUILD_SCRIPT  INSTALL  Makefile  config.h  config.status  configure  configure.ac  giac.specs  giac.specs32  libtool  path.h
dependencies/giac-1.7.0/check/: Makefile  TP00-sol.cas.out1  intindh  limit.tst  log  normalize.tst
dependencies/giac-1.7.0/debian/: Makefile  changelog
dependencies/giac-1.7.0/debianold/: Makefile  changelog
dependencies/giac-1.7.0/doc/: Makefile  Makefile.am  Makefile.in  aide_cas  giac.tex  giacfr.tex  khicasnw.html  numworks.js  nws.html  nws.js  nws_sig.js  service-worker.js  shakeys  tableau.js  tableauen.html  tableaufr.html  xcas.js  xcasen.html  xcasfr.html
dependencies/giac-1.7.0/examples/: Makefile
dependencies/giac-1.7.0/intl/: Makefile
dependencies/giac-1.7.0/micropython-1.12/: Makefile  Makefile.am  Makefile.in
dependencies/giac-1.7.0/po/: Makefile  Makefile.in  POTFILES  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  giac.pot  it.gmo  it.po  pt.gmo  pt.po  zh.gmo  zh.po
dependencies/giac-1.7.0/src/: Cfg.cc  Editeur.cc  Editeur.h  Equation.cc  Graph.cc  Graph.h  Graph3d.cc  Graph3d.h  History.cc  History.h  Input.cc  Makefile  Makefile.am  Makefile.in  Makefile.w64  Python.cc  Python.h  Tableur.cc  Xcas1.cc  Xcas1.h  gmp_replacements.h  hist.cxx  hist.fl  hist.h  hist.menus  lexer_tab_int.h  mp.cc  mp.h  sha256.h  static_help.h  static_lexer__numworks.h  static_lexer_numworks.h
dependencies/gmp-6.2.1/: Makefile  config.h  config.m4  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  gmp.h  gmp.pc  gmpxx.pc  libtool
dependencies/gmp-6.2.1/cxx/: Makefile
dependencies/gmp-6.2.1/demos/: Makefile
dependencies/gmp-6.2.1/doc/: Makefile
dependencies/gmp-6.2.1/mpf/: Makefile
dependencies/gmp-6.2.1/mpn/: Makefile
dependencies/gmp-6.2.1/mpq/: Makefile
dependencies/gmp-6.2.1/mpz/: Makefile
dependencies/gmp-6.2.1/printf/: Makefile
dependencies/gmp-6.2.1/rand/: Makefile
dependencies/gmp-6.2.1/scanf/: Makefile
dependencies/gmp-6.2.1/tests/: Makefile
dependencies/gmp-6.2.1/tune/: Makefile
dependencies/gsl-2.7/: Makefile  config.h  config.status  libtool
dependencies/gsl-2.7/.deps/: gsl-histogram.Po  gsl-randist.Po
dependencies/gsl-2.7/blas/: Makefile
dependencies/gsl-2.7/block/: Makefile
dependencies/gsl-2.7/bspline/: Makefile
dependencies/gsl-2.7/bst/: Makefile
dependencies/gsl-2.7/cblas/: Makefile
dependencies/gsl-2.7/cdf/: Makefile
dependencies/gsl-2.7/cheb/: Makefile
dependencies/gsl-2.7/combination/: Makefile
dependencies/gsl-2.7/complex/: Makefile
dependencies/gsl-2.7/const/: Makefile
dependencies/gsl-2.7/deriv/: Makefile
dependencies/gsl-2.7/dht/: Makefile
dependencies/gsl-2.7/diff/: Makefile
dependencies/gsl-2.7/doc/: Makefile
dependencies/gsl-2.7/eigen/: Makefile
dependencies/gsl-2.7/err/: Makefile
dependencies/gsl-2.7/fft/: Makefile
dependencies/gsl-2.7/filter/: Makefile
dependencies/gsl-2.7/fit/: Makefile
dependencies/gsl-2.7/gsl/: Makefile
dependencies/gsl-2.7/histogram/: Makefile
dependencies/gsl-2.7/ieee-utils/: Makefile
dependencies/gsl-2.7/integration/: Makefile
dependencies/gsl-2.7/interpolation/: Makefile
dependencies/gsl-2.7/linalg/: Makefile
dependencies/gsl-2.7/matrix/: Makefile
dependencies/gsl-2.7/min/: Makefile
dependencies/gsl-2.7/monte/: Makefile
dependencies/gsl-2.7/movstat/: Makefile
dependencies/gsl-2.7/multifit/: Makefile
dependencies/gsl-2.7/multifit_nlinear/: Makefile
dependencies/gsl-2.7/multilarge/: Makefile
dependencies/mpfi/: Makefile  Makefile.in  config.status  configure  libtool  mpfi_config.h  mpfi_config.h.in  stamp-h1
dependencies/mpfr-4.1.0/: Makefile  config.status  libtool  mpfr.pc
dependencies/pari-2.13.3/: AUTHORS  CHANGES  COMPAT  Makefile  NEW  README  gp
lv_demos/: lv_demo.h  lv_demo.mk
lv_drivers/: CMakeLists.txt  library.json  lv_drivers.mk  lv_drv_conf_template.h
lv_drivers/display/: fbdev.c  monitor.c
lv_drivers/gtkdrv/: README.md  gtkdrv.c
lv_drivers/indev/: evdev.c  evdev.h  keyboard.c  mouse.c
lv_drivers/sdl/: sdl_gpu.c  sdl_gpu.h
lv_drivers/wayland/: README.md  wayland.c  wayland.h
lv_drivers/win32drv/: win32drv.c
lvgl/: CMakeLists.txt  Kconfig  README.md  lv_conf_template.h  lvgl.h
lvgl/docs/: CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  conf.py  index.md
lvgl/scripts/: install-prerequisites.sh  lv_conf_internal_gen.py  style_api_gen.py
lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
lvgl/tests/: README.md  main.py
schemas/: CMakeLists.txt  clientLog.schema.json  connectionAdminInfo.schema.json  connectionPermission.schema.json  connectionPermissionReply.schema.json  connectionPermissionReplySchema  connectionRequest.schema.json  connectionRequestSchema  connectionRevoke.schema.json  ssgcData.schema.json
src/: CMakeLists.txt  Calculator.cpp  Keypad.cpp  MCP23017.cpp  Settings.cpp  WebSocket.cpp  calculator_state.cpp  easywsclient.cpp  graph.cpp  graphing.cpp  history.cpp  main.cpp  state.cpp  tabs.cpp
src/include/: Calculator.h  Keypad.h  Keypad.hxx  MCP23017.hxx  Settings.hxx  WebSocket.hxx  algorithm_extensions.hxx  async_extensions.hxx  calculator_state.hxx  graph.hxx  graphing.hxx  history.hxx  lock_icon_15x17.hxx  option.hxx  rounding.hxx  state.hxx  tabs.hxx  ticks.hxx  wifi_signal_0.hxx  wifi_signal_1.hxx  wifi_signal_2.hxx  wifi_signal_3.hxx
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  ticktest.cpp
(+3489 files in other folders)
