CMAKE_MINIMUM_REQUIRED(VERSION 3.22.3)
PROJECT (SSGC)
SET(CMAKE_CXX_STANDARD 14)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
# SET(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
# SET(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")

include(CTest)

# include_directories(${CMAKE_SOURCE_DIR}/lv_drivers ${CMAKE_SOURCE_DIR}/lvgl ${CMAKE_SOURCE_DIR}/src)
# include(${CMAKE_SOURCE_DIR}/tests/CMakeLists.txt)
option(GIAC_ENABLE "Enable Giac library" ON)
option(PI_ENABLE "Enable compiling/linking for the Raspberry PI Zero 2 W" OFF)
option(LINUX_ENABLE "Enable compiling/linking for linux systems" ON)
option(WINDOWS_ENABLE "Enable compiling/linking for windows" OFF)
if(LINUX_ENABLE)
    message(STATUS "Enabling Linux linkage...")
    
    find_library(libsdl2 SDL2 NAME sdl2 REQUIRED)
    find_library(libm m REQUIRED)
    find_library(libpthread pthread REQUIRED)
    #add_link_options(-lm -lpthread -lSDL2)
endif()
if(PI_ENABLE)
    message(STATUS "Enabling Raspberry PI linkage...")
    find_library(libm m REQUIRED)
    find_library(libpthread pthread REQUIRED)
    find_library(libi2c i2c REQUIRED)
    find_library(libwiringPi wiringPi REQUIRED)
    #add_link_options(-lm -lpthread -li2c -lwiringPi)
endif()
if(GIAC_ENABLE)
    message(STATUS "Enabling Giac linkage...")
    find_library(libgmp gmp REQUIRED)
    find_library(libgiac giac NAME giac-dev REQUIRED)
    #add_link_options(-lgiac -lgmpxx -lgmp)
endif()
if(WINDOW_ENABLE)
    message(STATUS "Enabling Windows linkage...")
    find_library(libgdi32 gdi32 REQUIRED)
    #add_link_options(-lgdi32)
endif()

if(LINUX_ENABLE)
    set(ENABLE_LINUX 1)
else()
    set(ENABLE_LINUX 0)
endif()
if(PI_ENABLE)
    set(ENABLE_PI 1)
else()
    set(ENABLE_PI 0)
endif()
if(GIAC_ENABLE)
    set(ENABLE_GIAC 1)
else()
    set(ENABLE_GIAC 0)
endif()
if(WINDOWS_ENABLE)
    set(ENABLE_WINDOWS 1)
else()
    set(ENABLE_WINDOWS 0)
endif()
configure_file(calc_conf.h.in calc_conf.h @ONLY)

#message(${CMAKE_SYSTEM_NAME})

#file(GLOB_RECURSE LVGL_SOURCE_FILES "lvgl/*.c")
#file(GLOB_RECURSE LVGL_DRIVERS_SOURCE_FILES "lv_drivers/*.c")
#add_link_options(-lm -lpthread -lSDL2 -lgmp -lgiac)
message(STATUS "CMAKE BUILD TYPE: " ${CMAKE_BUILD_TYPE})
include_directories(${CMAKE_SOURCE_DIR})
add_subdirectory(lv_drivers)
add_subdirectory(lvgl)

add_subdirectory(src)
add_subdirectory(tests)





#ADD_EXECUTABLE(demo ${LVGL_DRIVERS_SOURCE_FILES} ${LVGL_SOURCE_FILES} ${SOURCE_FILES})

